fixes for MSIG contact us form is done and updated caret-down path as it is not visible

--- a/css/index.css
+++ b/css/index.css
@@ -839,7 +839,7 @@
           box-sizing: border-box;
           -webkit-appearance: none;
           -moz-appearance: none;
-          background-image: url('/assets/icons/caret-down.svg');
+          background-image: url('../assets/icons/caret-down.svg');
           background-repeat: no-repeat;
           background-position: right 7% center;
           /* -webkit-box-sizing: border-box;
